nivasa-macros/tests/trybuild/module_doc_roles_invalid.rs
use nivasa_macros::module;

/// __NIVASA_ROLES__ , ,
#[module({})]
struct AppModule;

fn main() {}
